--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
         
     <modules>
         <module>simple-server</module>
+        <module>simple-servlet-container</module>
     </modules>
 </project>
